--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                       <p>555.427.1236</p>
                     </li>
                     <li>
-                      <p>Copyright T&J 2019<span>All Rights Reserved</span></p>
+                      <p>Copyright 2019<span>All Rights Reserved</span></p>
                     </li>
                   </ul>
                 </div>
